Some updates, some removing memory. Not much yet.

--- a/notebooks/load_data.ipynb
+++ b/notebooks/load_data.ipynb
@@ -39,7 +39,8 @@
     },
     "colab": {
       "name": "load_data.ipynb",
-      "provenance": []
+      "provenance": [],
+      "machine_shape": "hm"
     }
   },
   "cells": [
@@ -54,6 +55,22 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import gc"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oHSCpt4d1lxy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# RUN THIS FOR MORE RAM. It'll crash the colab notebook but then ask if you want to upgrade to a higher ram runtime.\n",
+        "a = []\n",
+        "while(1):\n",
+        "    a.append(\"1\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -81,11 +98,12 @@
         "from pydrive.drive import GoogleDrive\n",
         "from google.colab import auth\n",
         "from oauth2client.client import GoogleCredentials\n",
-        "# Authenticate and create the PyDrive client.\n",
+        "# Authenticate and create the PyDrive client. You'll need to do this in order to load the CSV files from drive\n",
+        "\n",
         "auth.authenticate_user()\n",
         "gauth = GoogleAuth()\n",
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
-        "drive = GoogleDrive(gauth)"
+        "drive = GoogleDrive(gauth)\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -146,7 +164,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a4fc77b6-201c-425d-f06a-ea9f74a1f48c"
+        "outputId": "54b65bf9-eb6a-440d-dfdc-6a5180ae86ea"
       },
       "source": [
         "sell_prices_df = pd.read_csv('sell_prices.csv')\n",
@@ -154,7 +172,7 @@
         "calendar_df = pd.read_csv('calendar.csv')\n",
         "sell_prices_df.shape, sales_train_val_df.shape"
       ],
-      "execution_count": 33,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +184,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 8
         }
       ]
     },
@@ -193,12 +211,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 253
         },
-        "outputId": "38aeb829-1651-4521-a5d4-a24b8a5493f3"
+        "outputId": "015752bb-1bd8-4a05-a37b-7bcedf6b1654"
       },
       "source": [
         "sales_train_val_df.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +763,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 9
         }
       ]
     },
@@ -758,12 +776,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "20d2280b-e861-455b-d536-b5a928142ee5"
+        "outputId": "f0d72b23-db4a-4efe-c5a3-485659323cf1"
       },
       "source": [
         "calendar_df.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -907,7 +925,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 10
         }
       ]
     },
@@ -920,12 +938,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "3f2c9fc0-f8d8-442a-c1de-8555bb64cdc9"
+        "outputId": "1874207d-2f4e-4d39-9973-7827574df9c4"
       },
       "source": [
         "sell_prices_df.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1007,7 +1025,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 11
         }
       ]
     },
@@ -1030,7 +1048,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 272
         },
-        "outputId": "4d0e8b6d-9ef7-4f83-c8de-439b0a0e51b1"
+        "outputId": "b87909d5-3c4b-4919-a01f-d9650d908f8b"
       },
       "source": [
         "\n",
@@ -1045,7 +1063,7 @@
         "    \n",
         "print(calendar_df.dtypes)"
       ],
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,13 +1107,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "776ba5a4-9b70-4263-abc2-4d1f3c47dee0"
+        "outputId": "34ec750a-3cad-4b86-a0e3-627c0d2070ca"
       },
       "source": [
         "print(calendar_df.event_name_1.unique())\n",
         "print(calendar_df.event_name_2.unique())"
       ],
-      "execution_count": 41,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,12 +1150,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "d2cec302-7bb4-42a6-c142-fa3da619e770"
+        "outputId": "a5432387-49da-4fdd-d3d0-70287980cdb4"
       },
       "source": [
         "sales_train_val_df.dtypes #welp that's a lot of  columns. good idea to make it smaller to take up less memory probably"
       ],
-      "execution_count": 42,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 14
         }
       ]
     },
@@ -1216,38 +1234,6 @@
             "tags": []
           },
           "execution_count": 46
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oHSCpt4d1lxy",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
-        },
-        "outputId": "172ffa9b-ff27-4fdc-92f9-5886790061fc"
-      },
-      "source": [
-        "# Apparently this is a way to expand RAM?\n",
-        "a = []\n",
-        "while(1):\n",
-        "    a.append(\"1\")"
-      ],
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-49-71ff8e38d003>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     }
